# hpm-slint

./: Cargo.toml  HPMicro.yaml  build.rs  memory.x
.cargo/: config.toml
src/: ft6236.rs  main.rs  rm67162.rs  slint_ui.rs
ui/: printerdemo.slint
