[package]
name = "hpm-slint"
version = "0.1.0"
edition = "2021"

[dependencies]
hpm-hal = { version = "0.0.1", path = "../hpm-hal", features = ["rt", "embassy", "hpm5301"] }
riscv-rt = "0.12"
embassy-time = { version = "0.3.0", features = ["tick-hz-1_000_000"] }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-graphics = "0.8.1"
riscv = { version = "0.11.1", features = ["critical-section-single-hart"] }
embedded-hal = "1.0.0"
slint = { version = "1.6.0", default-features = false, features = ["compat-1-2", "renderer-software", "unsafe-single-threaded", "libm"] }
embedded-graphics-core = "0.4.0"
embedded-alloc = "0.5"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2

[build-dependencies]
slint-build = "1.6.0"

[[bin]]
name = "hpm-slint"
path = "src/main.rs"